# obsidian-machine-knowledge-template

./: .gitignore  AGENTS.md  Atlas.canvas  Atlas.md  Home.md  README.md  SECURITY.md  SETUP_PROMPT.md  plugins.lock.json  workspace.projects.json
.agents/: README.md
.agents/ideas/: README.md
.agents/skills/example/: SKILL.md
.agents/state/: current-focus.md  migration-notes.md  project-relations.md  workspace-inventory.md
.github/workflows/: checks.yml  privacy.yml
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json
.obsidian/plugins/extended-graph/: data.json
.obsidian/plugins/notebook-navigator/: data.json
.obsidian/plugins/obsidian-style-settings/: data.json
.obsidian/plugins/remote-relevant-tree/: LICENSE  (+4 more)
.pi/graphs/: README.md
_templates/: Application.md  Decision.md  Device.md  Evidence.md  Project.md  Raw.md  Truth.md
config/kb/: config.example.yml  obsidian-tree-ignore.example.txt
docs/: cross-project-map.md  index.md  projects.md
docs/agents/: extended-graph.md  state-and-skills.md
docs/bases/: Applications.base  Current Truth.base  Decisions.base  Devices.base  Evidence.base  Human Review.base  Projects.base
docs/knowledge-system/: agent-contract.md  index.md  knowledge-model.md  qmd-retrieval.md  vault-architecture.md
docs/projects/: example-project.md
docs/setup/: index.md
example-project/: README.md
example-project/docs/: index.md
knowledge/: index.md
scripts/: check_public.py  sync_visuals.py  test_sync_visuals.py
tools/kb/: README.md  kb.py  pyproject.toml  test_kb.py
