[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okf-kb-cli"
version = "0.1.0"
description = "Governed OKF knowledge-base CLI"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6,<7"]

[project.scripts]
kb = "kb:main"

[tool.setuptools]
py-modules = ["kb"]
